--- a/client/HTML/LandingPages/vetcareLandingPage.ejs
+++ b/client/HTML/LandingPages/vetcareLandingPage.ejs
@@ -15,7 +15,7 @@
 
 <body>
 
-    <%- include("../components/navbar", {notlogin: true}); %>
+    <%- include("../components/navbar", {notlogin}); %>
 
         <div class="background-image">
             <div class="background-content">
