--- a/client/css/components/navbar.css
+++ b/client/css/components/navbar.css
@@ -74,6 +74,7 @@ html {
   overflow: hidden;
   overflow-y: scroll;
   display: none;
+  z-index: 1000;
 }
 
 .components-navbar-enter .shopping-cart .qty{
