--- a/client/HTML/LandingPages/mainLandingPage.ejs
+++ b/client/HTML/LandingPages/mainLandingPage.ejs
@@ -64,7 +64,7 @@
                 <a href="#contact-us"><button class="normal-btn">Contact Us</button></a>
               </div>
 
-              <div class="review__section">
+              <!-- <div class="review__section">
                 <h3>Our happy pet owners</h3>
                 <h4><span>&starf;</span> 4.7 (1.5k Reviews)</h4>
                 <div class="review__images">
@@ -74,7 +74,7 @@
                   <img src="/img/mainLandingPage/review4.jpg" alt="" class="img__item goleft" />
                   <div class="text__item goleft">+3k</div>
                 </div>
-              </div>
+              </div> -->
             </div>
 
             <div class="right">
