--- a/client/HTML/components/adminLayout.ejs
+++ b/client/HTML/components/adminLayout.ejs
@@ -25,20 +25,20 @@
         <h3>dashboard</h3>
         </a>
 
-        <a href="/profile/admin/customers" class="admin__menu-item<%= path === 'customers' ? ' admin__active' : ''; %>">
+        <!-- <a href="/profile/admin/customers" class="admin__menu-item<%= path === 'customers' ? ' admin__active' : ''; %>">
         <span class="material-icons-sharp"> person_outline </span>
         <h3>Customers</h3>
-        </a>
+        </a> -->
 
         <a href="/profile/admin/orders" class="admin__menu-item<%= path === 'orders' ? ' admin__active' : ''; %>">
         <span class="material-icons-sharp"> receipt_long </span>
         <h3>Orders</h3>
         </a>
 
-        <a href="/profile/admin/employees" class="admin__menu-item<%= path === 'employees' ? ' admin__active' : ''; %>">
+        <!-- <a href="/profile/admin/employees" class="admin__menu-item<%= path === 'employees' ? ' admin__active' : ''; %>">
         <span class="material-icons-outlined"> badge </span>
         <h3>Employees</h3>
-        </a>
+        </a> -->
 
         <a href="/profile/admin/messages" class="admin__menu-item<%= path === 'messages' ? ' admin__active' : ''; %>">
         <span class="material-icons-sharp"> mail_outline </span>
